--- a/templates/login.html
+++ b/templates/login.html
@@ -1,1 +1,5 @@
-<h1>login page</h1>
+<form action="" method=POST>
+    <p><input name="username" value=""></p>
+    <p><input name="password" type="password" value=""></p>
+    <p><button type="submit">Login</button></p>
+</form>
